# ChangeLog for net-misc/x2goclient
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/ChangeLog,v 1.22 2013/09/11 12:50:22 voyageur Exp $

*x2goclient-4.0.1.1 (11 Sep 2013)

  11 Sep 2013; Bernard Cafarelli <voyageur@gentoo.org>
  -x2goclient-3.99.2.2.ebuild, -x2goclient-4.0.0.1.ebuild,
  -x2goclient-4.0.0.4.ebuild, +x2goclient-4.0.1.1.ebuild:
  Version bump, remove old versions

  11 Jun 2013; Agostino Sarubbo <ago@gentoo.org> x2goclient-4.0.1.0.ebuild:
  Stable for x86, wrt bug #472582

  11 Jun 2013; Agostino Sarubbo <ago@gentoo.org> x2goclient-4.0.1.0.ebuild:
  Stable for amd64, wrt bug #472582

*x2goclient-4.0.1.0 (27 Mar 2013)

  27 Mar 2013; Bernard Cafarelli <voyageur@gentoo.org>
  +x2goclient-4.0.1.0.ebuild:
  Version bump

*x2goclient-4.0.0.4 (07 Mar 2013)

  07 Mar 2013; Bernard Cafarelli <voyageur@gentoo.org>
  -x2goclient-3.99.3.0.ebuild, +x2goclient-4.0.0.4.ebuild:
  Version bump

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> x2goclient-3.99.2.2.ebuild,
  x2goclient-3.99.3.0.ebuild, x2goclient-4.0.0.1.ebuild:
  Move Qt dependencies to the new category

*x2goclient-4.0.0.1 (08 Jan 2013)

  08 Jan 2013; Bernard Cafarelli <voyageur@gentoo.org>
  -x2goclient-3.0.1.18.ebuild, -files/x2goclient-3.0.1.18-cups1.5.patch,
  -x2goclient-3.99.2.1.ebuild, +x2goclient-4.0.0.1.ebuild:
  Version bump, drop some old versions

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> x2goclient-3.99.2.2.ebuild:
  Stable for x86, wrt bug #445766

  03 Dec 2012; <ago@gentoo.org> x2goclient-3.99.2.2.ebuild:
  Stable for amd64, wrt bug #445766

*x2goclient-3.99.3.0 (15 Nov 2012)

  15 Nov 2012; Bernard Cafarelli <voyageur@gentoo.org>
  +x2goclient-3.99.3.0.ebuild:
  Version bump

*x2goclient-3.99.2.2 (21 Aug 2012)

  21 Aug 2012; Bernard Cafarelli <voyageur@gentoo.org>
  +x2goclient-3.99.2.2.ebuild:
  Version bump

*x2goclient-3.99.2.1 (10 Jul 2012)
