@@ -3,14 +3,14 @@ Hash: SHA256
 
 DIST x2goclient-4.0.1.0.tar.gz 1323833 SHA256 3c72760f901ef6801529b9b5d8c3333002a53c65bdaeb9832f80d65f44665ed6 SHA512 6127df3826f79b72562d8184b1d3742f4cf5704f13db3b0eb8cbef32e99863dc7894785e289742fa39cad26965f8615b601bd86d8b9ca94de352c9db24acd141 WHIRLPOOL 9b5781bc38c4983fd0e1704f62239b4f43439a9b3d411b683ee07e32ea84ee0908ab5a262ef39529515222b4b379840c0f55a6ec4b31b71ddb7454039fcfce94
 DIST x2goclient-4.0.1.1.tar.gz 1345719 SHA256 dd3877f8830d6085241c60becbd79608a8b2155f941bac258cc5e2079f818be9 SHA512 dc7f8e173c6d8043a1528e9fe20480191d2e9d98321c9b22fdf5b0b0a181eb67d360bc076235a4a5ffe53e11d005b9c0e764f43c972f801e04368f3a4fd4f3dd WHIRLPOOL 5918e08b9078fc3e8defe0fca128ccbf5f5974991bf7bcf90be5ff296ce864f303bcc891465c3fb398f7752f7085fc4ce1711c62bc3827819697be10a8c03983
-EBUILD x2goclient-4.0.1.0.ebuild 898 SHA256 1d12f1c3d5bd87634b3d3d5e586a98450f1d5186e0234319337fb8d93b42f453 SHA512 0ad8b31bbf834d9f824d993690e60b06a42fec9b2d6f24ce05180e37b00eb552c60c587eeb18fceaacced6e1f671b0d857e2f9b960665685f31412b47a2eeab8 WHIRLPOOL 7a2f45df29bd7689e3629463b2d7fdbcd201cdf92e4192ce23398fe04fbfcc18cb7d2725b04b0968bdfc4fad8780979e0a35844e10ab20dea3b0beeef7d50e1a
-EBUILD x2goclient-4.0.1.1.ebuild 905 SHA256 dad170fa13bfdf2b232d4d01f40a8c46672ad76dc7cdcd06fa23b642301ef977 SHA512 3f1e2c17c318d910697e6fe76437327007e4a0c89591eb1b4c50b1119d73193784e2285416c80066f5fd7cbd516600569122ec0c4889fd19970683c8fa029619 WHIRLPOOL ffbbdb4fe55171625f80a4f1d55a66bb6fe53a4621556348a7170f77fe0b88047c920ac62577d07d264cce51c6955eeebda23c734f4f160568f646c03619ac86
-MISC ChangeLog 3985 SHA256 fbfdfbb7b1f1976675e347b5aa57700572b0399261ae92da20d5f7c410117226 SHA512 5f2914302f0b642b5f14b84fe700cbb7a721283160bb0f2a3d00f93a120afe6fc9266292a18fb88313df72011bbec1ae0ee0d0b5aa959a971ab40fa8291a0615 WHIRLPOOL ccc4beacfd0b5569e4f0bf97c9c08011c4ecb26b6eb9e0c807300259f0fc89c377a7d9108a0ff0a5ef79edc0b99837a5acc57a0b6ca1c350d8dabe9f6c2601bd
+EBUILD x2goclient-4.0.1.0.ebuild 1207 SHA256 8d113ce0e0d31bcab6968b2b5af29995c10a2e2027cdf4b14f8a26615e8dde98 SHA512 d1cf93a8fe25ff3000cbfd4e1caba50fe1deafe7ee2251fee92d9de7628bce63d15702b7512cae4ad8d2278ff57c13086ac1fa0995b3bd8f31864ee25221c754 WHIRLPOOL 0c89ea974ddbe87b4b75fc81eb6ef0f1e71f7ec096f73e5820a520a793cd357c81125a212a80ce4ffcc72a6d0d80511b57ceab4a283ef0a4a6bed1681f85a75c
+EBUILD x2goclient-4.0.1.1.ebuild 917 SHA256 667c4b4c04ced53876503ebd5f1b8461bd900a735a6dcc399e590e462c52d999 SHA512 d89dc0b58b7a1657f523df0b88005ff3510da5d26a3d4205331b21b3a54f2d1a49c0c259b0dae01371fd5a7b04e350e58888be04884b5d5be3deee9123634c9e WHIRLPOOL 8859611524c83d8e85232409a298922f2585bedf62402cd867dd37218cb734cbf54bc60a39a6e0a7a9ffb70e21bdb253941c1ef2026c7c4eee7b9b0b306178a6
+MISC ChangeLog 4190 SHA256 c9a86e16a21b2cea4617dd84ac91e0b4b115df727083668452e5a1b310dccd48 SHA512 48d65b2d4c8af09ec5bf3ca1aaeeb17af8658c2d860bd97ea875bc85131ad55e90f640d0b45f28c6ad99ed67c103943e212bec6988222c37d2f6778d755d4be1 WHIRLPOOL 110db8294b988d727de93316fbf4a7394ef7a3dcd551738c35a7aad9d50047f7bba859068b71ce18b325dcebbca8e866f5b4dcda3ce032d17b37609d15818d53
 MISC metadata.xml 211 SHA256 a6b5a5387c7e7f441d794c61edf1718caa3c58ffbf9b595ec536ff9617a7471f SHA512 a07791c0d23ed28f99fa6d1b38e25477b2a4a3eecc8dbcf3a098ed4a9d8ede755a8711f35046e8ae77107814c2c702ce26ea4b35a014b243301e2cae8fd747a0 WHIRLPOOL 83c2fcc96384e3bd5a97283fe0392d4bd9af41d175bedda09686349c2e26b64796157b81b42b74faed1adc1035d1fe3442986f2a89a84a8b29241283381c0d1b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlIwZxIACgkQFYEBGcdFJfKU0gD+OLAK4eguyBy6QrYMLAtrwA5c
-iZCW1MAWmbCp80CAtMAA+QHxcEtwlP4ZDrGefotH+Lj7ZXfDDJba8ItYViW7mwzv
-=rn3W
+iF4EAREIAAYFAlJk8KEACgkQFYEBGcdFJfJiXAEAi93pmmZXhdaCTdG+kKCJdiuI
+rfZ7Ti/eGJkGXzbHWL8A/1wldHxziZOeOuGHGW13UyO8P4OO+pBlHxIm6/8U72E4
+=A0ZJ
 -----END PGP SIGNATURE-----
