@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/Attic/x2goclient-4.0.1.1.ebuild,v 1.1 2013/09/11 12:50:22 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/Attic/x2goclient-4.0.1.1.ebuild,v 1.2 2013/10/21 09:15:07 voyageur Exp $
 
 EAPI=4
 inherit eutils qt4-r2
@@ -14,7 +14,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="ldap"
 
-DEPEND="net-libs/libssh
+DEPEND=">=net-libs/libssh-0.6.0_rc1
 	net-print/cups
 	dev-qt/qtcore:4[ssl]
 	dev-qt/qtgui:4
